--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@rsbuild/core": "^1.3.1",
     "@rsbuild/plugin-react": "^1.1.1",
     "babel-plugin-react-compiler": "^19.1.0-rc.1",
-    "eslint-plugin-react-hooks": "^6.0.0-rc.1"
+    "eslint-plugin-react-hooks": "^6.0.0-rc.1",
+    "react-router-dom": "^7.6.0"
   }
 }
